# feature-descriptor

./: .gitignore  CMakeLists.txt  README.md
harris/: harris.h  main.cpp
sift/: display.cpp  display.h  main.cpp  match.cpp  match.h  sift.cpp  sift.h
